# argscan

./: .gitignore  README.md  argscan.py  pyproject.toml  test_cli.py
argscan/: __init__.py  argscan.py
tests/: test_argscan.py
