[project]
name = "argscan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
